; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_addstr_urlencode.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_addstr_urlencode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_addstr_urlencode(%struct.strbuf* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strlen(i8* %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @strbuf_add_urlencode(%struct.strbuf* %7, i8* %8, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @strbuf_add_urlencode(%struct.strbuf*, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
